feat: integrate tsoa for API documentation and routing
- Added tsoa for automatic route generation and OpenAPI spec creation.
- Created authentication middleware for JWT verification.
- Implemented user and auth controllers with tsoa decorators.
- Updated package.json to include tsoa commands and dependencies.
- Removed old route files and replaced them with tsoa-generated routes.
- Added error handling middleware for centralized error management.
- Created JWT utility functions for token generation and verification.
- Updated user service to handle user creation and login with hashed passwords.
- Added interfaces for authenticated user and request types.
- Created a readme file with admin credentials for quick access.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ node_modules/
 /src/generated/
 /src/generated/prisma/
 
+# TSOA
+src/routes/routes.ts
+src/docs/swagger.json
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
