--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pino": "^9.7.0",
     "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.6.0"
