--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "ts-node src/index.ts",
+    "build": "npx prisma generate && npx tsoa routes && npx tsoa spec",
+    "start": "npx ts-node -r tsconfig-paths/register src/index.ts",
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "tsoa:routes": "tsoa routes",
     "tsoa:spec": "tsoa spec",
